# NAP

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  env.yml  linting.md  pyproject.toml  requirements.txt  setup.cfg
.dvc/: config
data/Amer/: .gitignore  AmerR4A_V4.1000.hic.dvc  Amer_repeat_annotation_total.bed.dvc
data/Amer/2R/: .gitignore  2R_chr.fa.dvc  2r_annotation_order.txt  2r_annotation_order.txt.dvc  ncounts_2R.tsv.dvc
data/Amer/3L/: .gitignore  3L_chr.fa.dvc  3l_annotation_order.txt  3l_annotation_order.txt.dvc  ncounts_3L.tsv.dvc
evaluation/: metrics.json
model analysis/: shap_analysis.ipynb
napp/: extract_target.py  predictor.py  preprocessing.py  training.py
napp/utils/: ml.py  preprocessing.py  utils.py
src/: extract_target.py  predictor.py  preprocessing.py  training.py
src/utils/: preprocessing.py  utils.py
