[tool.poetry]
name = "napp"
version = "0.1.1"
description = ""
authors = ["IvanKozlov98 <ivan1998olimp@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
bio = "^1.3.8"
biothings-client = "^0.2.6"
catboost = "^1.0.6"
certifi = "^2022.5.18.1"
charset-normalizer = "^2.0.12"
cycler = "^0.11.0"
hic-straw = "^1.3.0"
idna = "^3.3"
joblib = "^1.1.0"
kiwisolver = "^1.4.2"
matplotlib = "^3.3.4"
mygene = "^3.2.2"
pandas = "^1.2.4"
pillow = "^9.1.1"
plotly = "^5.8.0"
pybind11 = "^2.9.2"
pyparsing = "^3.0.9"
python-dateutil = "^2.8.2"
pytz = "^2022.1"
requests = "^2.27.1"
scikit-learn = "^0.24.1"
scipy = "^1.6.2"
six = "^1.16.0"
tenacity = "^8.0.1"
tqdm = "^4.59.0"
urllib3 = "^1.26.9"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
yapf = "^0.32.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.10.27"
pep8-naming = "^0.13.2"
flake8-docstrings = "^1.6.0"
flake8-builtins = "^2.0.1"
flake8-quotes = "^3.3.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
